forgot-password features added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,11 +32,8 @@ services:
       JWT_SECRET: your-super-secret-jwt-key-change-in-production
       JWT_EXPIRES_IN: 7d
       PORT: 3000
-      SMTP_HOST: smtp.gmail.com
-      SMTP_PORT: 587
-      SMTP_USER: ${SMTP_USER:-your-email@gmail.com}
-      SMTP_PASS: ${SMTP_PASS:-your-app-password}
-      SMTP_FROM: Library Management System <${SMTP_USER:-your-email@gmail.com}>
+      RESEND_API_KEY: re_PJEXAADJ_4XvgH3jhBhTytKsfmEgpxkga
+      RESEND_FROM_EMAIL: Library Management <onboarding@resend.dev>
     depends_on:
       db:
         condition: service_healthy
